--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@ body {
 h1 {
     font-size: 50px;
 }
+h2 {
+    font-size: 40px;
+}
 
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible_container {
     display:flex;
     margin-bottom: 150px;
 }
@@ -43,4 +46,34 @@ section {
 }
 .dream-big-p {
     margin-right: 30px;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+
+.experience-item {
+    box-shadow: 10px 10px 30px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;;
+}
+
+#full-stack-web-developer {
+    border-left: 8px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+
+
+#baby-web-developer {
+    border-left: 8px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
 }
